tests/snapshots/snapshot_tests__structs_h.snap
---
source: tests/snapshot_tests.rs
assertion_line: 32
expression: header
---
#pragma once
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>

/* Auto-generated by rust2cython. Do not edit. */

typedef struct {
    double x;
    double y;
} Point;

typedef struct {
    uint8_t r;
    uint8_t g;
    uint8_t b;
} Color;

double distance(Point p);

Color blend(Color a, Color b);

void rust2cython_free_string(char* ptr);
void rust2cython_free_string_array(char** ptr, size_t len);
