tests/snapshots/snapshot_tests__structs_pxd.snap
---
source: tests/snapshot_tests.rs
assertion_line: 30
expression: pxd
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t

cdef extern from "structs.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    ctypedef struct CPoint "Point":
        double x
        double y

    ctypedef struct CColor "Color":
        int r
        int g
        int b

    double c_distance "distance"(CPoint p)

    CColor c_blend "blend"(CColor a, CColor b)
