tests/snapshots/snapshot_tests__structs_pyx.snap
---
source: tests/snapshot_tests.rs
assertion_line: 31
expression: pyx
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t
from libc.stdlib cimport free, malloc
import numpy as np

cdef extern from "structs.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    ctypedef struct CPoint "Point":
        double x
        double y

    ctypedef struct CColor "Color":
        int r
        int g
        int b

    double c_distance "distance"(CPoint p)

    Color c_blend "blend"(CColor a, CColor b)


cdef class Point:
    cdef CPoint _c
    def __init__(self, double x, double y):
        self._c.x = x
        self._c.y = y

cdef class Color:
    cdef CColor _c
    def __init__(self, int r, int g, int b):
        self._c.r = r
        self._c.g = g
        self._c.b = b

def distance(p: Point) -> float:
    cdef CPoint _p_c = p._c
    cdef double _result = c_distance(_p_c)
    return _result

def blend(a: Color, b: Color) -> Color:
    cdef CColor _a_c = a._c
    cdef CColor _b_c = b._c
    cdef CColor _result = c_blend(_a_c, _b_c)
    out = Color.__new__(Color)
    out._c = _result
    return out
